--- a/web/splash/style.css
+++ b/web/splash/style.css
@@ -1,13 +1,16 @@
+html {
+    height: 100%
+}
+
 body {
-  margin:0;
-  height:100%;
-  background: #efefef;
-  
-  background-size: 100% 100%;
+    margin: 0;
+    min-height: 100%;
+    background-color: #efefef;
+    background-size: 100% 100%;
 }
 
 .center {
-  margin: 0;
+    margin: 0;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -54,10 +57,6 @@ body {
 
 @media (prefers-color-scheme: dark) {
   body {
-    margin:0;
-    height:100%;
-    background: #0f0f0f;
-    
-    background-size: 100% 100%;
+      background-color: #0f0f0f;
   }
 }
