--- a/android/app/src/main/res/layout/battery_widget.xml
+++ b/android/app/src/main/res/layout/battery_widget.xml
@@ -11,4 +11,15 @@
             android:textSize="18pt"
             android:text="Left:  • Right: • Case: "/>
 
+    <SeekBar
+        android:id="@+id/seekBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_row="1"
+        android:layout_column="0"
+
+        android:rotation="270"
+        android:max="100"
+        android:progress="30" />
+
 </GridLayout>
