--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="ic_launcher_background">#ffefefef</color>
+    <!-- I was looking for those fucking values for like 1.5 hour -->
+    <!-- There they were, hidden in some documentation for vendors system implementations?? Or something?? -->
+    <!-- https://source.android.com/docs/core/display/dynamic-color -->
+    <color name="battery_widget_text_color">@android:color/system_accent1_900</color>
+    <color name="battery_widget_bar_color">@android:color/system_accent1_200</color>
+    <color name="battery_widget_bar_background">@android:color/system_accent1_100</color>
 </resources>
