--- a/android/app/src/main/res/values/dimens.xml
+++ b/android/app/src/main/res/values/dimens.xml
@@ -3,4 +3,6 @@
     <dimen name="batteryWidgetPadding">8dp</dimen>
     <dimen name="batteryWidgetBackgroundRadius">16dp</dimen>
     <dimen name="batteryWidgetInnerRadius">8dp</dimen>
+    <dimen name="batteryWidgetSquaresSpacerSize">@dimen/batteryWidgetPadding</dimen>
+    <dimen name="batteryWidgetLinesSpacerSize">2dp</dimen>
 </resources>
