--- a/android/app/src/main/res/xml/battery_widget_config.xml
+++ b/android/app/src/main/res/xml/battery_widget_config.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
-    android:minWidth="40dp"
-    android:minHeight="40dp"
+    android:minWidth="80dp"
+    android:minHeight="80dp"
+    android:minResizeWidth="40dp"
+    android:minResizeHeight="40dp"
     android:updatePeriodMillis="86400000"
     android:initialLayout="@layout/glance_default_loading_layout"
+    android:previewImage="@drawable/battery_widget_preview"
     android:resizeMode="horizontal|vertical"
     android:widgetCategory="home_screen" />
